--- a/html.html
+++ b/html.html
@@ -14,15 +14,17 @@
 
 
 
+<a> href="berufsfeld.html" rel="stylesheet"</a>
+<button onclick="click()">Berufsfelder</button>
 
 
-<button class="click" type="button">Berufsfelder</button>
+<button onclick="click()">Möglichkeiten</button>
 
-<button class="click" type="button">Möglichkeiten nach der Schule</button>
 
-<button class="click" type="button">Bewerbungsmuster</button>
+<button onclick="click()">Bewerbungsmuster</button>
 
-<button class="click" type="button">Einungstest</button>
+
+<button onclick="click()">Einungstest</button>
 
 
 
