--- a/html.html
+++ b/html.html
@@ -14,11 +14,11 @@
 
 
 
-<a> href="berufsfeld.html" rel="stylesheet"</a>
-<button onclick="click()">Berufsfelder</button>
+<a> href="berufsfeld.html" rel="stylesheet"
+<button onclick="click()">Berufsfelder</button></a>
 
-
-<button onclick="click()">Möglichkeiten</button>
+<a> href="moeglich.html" rel="stylesheet"
+<button onclick="click()">Möglichkeiten</button></a>
 
 
 <button onclick="click()">Bewerbungsmuster</button>
