--- a/html.html
+++ b/html.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>NaFINDE DEIN BERUF</title>
+    <title>NaFINDEnnnnnn DEIN BERUF</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 
