--- a/htmls/htmlEinungstest.html
+++ b/htmls/htmlEinungstest.html
@@ -12,5 +12,9 @@
 
 <p>Einungstest</p>
 
+<div id="test"></div>
+<button id="zeigen">Ergebnis anzeigen</button>
+<div id="ergebnis"></div>
+
 </body>
 </html>
