--- a/htmls/html.html
+++ b/htmls/html.html
@@ -26,7 +26,7 @@
 <button class="click" type="button">Bewerbungsmuster</button>
 </a>
 <br>
-<a href="htmlEinungstest.html" >
+<a href="htmlEignungstest.html" >
 <button class="click" type="button">Einungstest</button>
 </a>
 
