--- a/htmls/htmlBerufe.html
+++ b/htmls/htmlBerufe.html
@@ -24,10 +24,10 @@
     <img src="https://www.uni-wuppertal.de/fileadmin/_processed_/5/9/csm_Informatik_BSc_COLOURBOX3414085_Druck_Zeichenfl%C3%A4che_1_1cb8173276.png" alt="IT,Computer" height="250" width="350">
 </span>
 </div>
-<span class="captionBild1">sdsdsdfsdfsdfsdfsdf</span>
+<span class="captionBild1">Dienstleistungen</span>
 
-    <span class="captionBild2">sdsd</span>
-    <span class="captionBild3">sdd</span>
+    <span class="captionBild2">Gesundheit</span>
+    <span class="captionBild3">IT,Computer</span>
 
 
 
@@ -40,9 +40,9 @@
     <img src="https://www.kreis-bergstrasse.de/unser-buergerservice/soziales-und-teilhabe/soziales/adobestock-303619130-verkl.-5second.jpg?resize=b0502f:1277,720,2794,1458_780x407c&cid=rfv.34dp" alt="Soziales" height="250" width="350">
 </span>
 
-    <span class="captionBild1">sdsdsdfsdfsdfsdfsdf</span>
+    <span class="captionBild1">Wirtschaft,Verwaltung</span>
 
-    <span class="captionBild2">sdsd</span>
+    <span class="captionBild2">Soziales</span>
 
 </div>
 
