--- a/htmls/htmlMoeglichkeiten.html
+++ b/htmls/htmlMoeglichkeiten.html
@@ -12,5 +12,26 @@
 
 <p>Möglichkeiten nach der Schule</p>
 
+<p> Hole einen Schulabschluss nach, finde Unterstützung für die Ausbildung, mache einen Freiwilligendienst oder gehe ins Ausland. Erfahre, welche Karrieremöglichkeiten du nach deiner Ausbildung hast. </p>
+
+<a href="htmlFreiwilligedienste.html">
+    <button class="click" type="button">Freiwilligedienste</button>
+</a>
+
+<a href="htmlWeiterbildung.html">
+    <button class="click" type="button">Weiterbildung</button>
+
+</a>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
