html und script Eignungstest

--- a/htmls/htmlEinungstest.html
+++ b/htmls/htmlEinungstest.html
@@ -10,16 +10,18 @@
 
 <h1>NaFINDE DEIN BERUF</h1>
 
-<p>Eignungstest</p>
-
 <br>
 
+<div id="Test">
 
+    <p>Eignungstest</p>
+    <div id="Fragen">Bist du bereit, der Test zu starten?</div>
+    <ul id="Antworten">
+    </ul>
+    <div style="clear: both"></div>
+    <button id="button" class="button">Test beginnen</button>
+</div>
 
-
-<div id="test"></div>
-<button id="zeigen">Ergebnis anzeigen</button>
-<div id="ergebnis"></div>
 
 </body>
 </html>
