--- a/htmls/htmlMoeglichkeiten.html
+++ b/htmls/htmlMoeglichkeiten.html
@@ -20,9 +20,11 @@
 
 <a href="htmlWeiterbildung.html">
     <button class="click" type="button">Weiterbildung</button>
-
 </a>
 
+<a href="htmlStudium.html">
+    <button class="click" type="button">Studium</button>
+</a>
 
 
 
