--- a/htmls/htmlMuster.html
+++ b/htmls/htmlMuster.html
@@ -12,5 +12,18 @@
 
 <p>Bewerbungsmuster</p>
 
+<a href="https://planet-beruf.de/fileadmin/assets/01_Neu/05_PDF_Neu/Wie_bewerbe_ich_mich/Arbeitsblaetter/Musteranschreiben_fuer_eine_Ausbildungsstelle.pdf">
+    <button class="click" type="button">Musteranschreiben für Ausbildungsstelle</button>
+</a>
+
+
+
+<a href="https://planet-beruf.de/fileadmin/assets/01_Neu/05_PDF_Neu/Wie_bewerbe_ich_mich/Arbeitsblaetter/Musterlebenslauf.pdf">
+    <button class="click" type="button">Musterlebenslauf</button>
+</a>
+
+
+
+
 </body>
 </html>
