html und script Eignungstest

--- a/htmls/htmlEinungstest.html
+++ b/htmls/htmlEinungstest.html
@@ -1,27 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>NaFINDE DEIN BERUF</title>
-    <link rel="stylesheet" href="../style/styleEinungstest.css">
+    <title>🔮Finde dein zukőnftigen Job!</title>
     <script src="../scripts/scriptEinungstest.js"></script>
+    <link rel="stylesheet" href="../style/styleEinungstest.css">
+
 </head>
 <body>
-
-<h1>NaFINDE DEIN BERUF</h1>
-
-<br>
-
-<div id="Test">
-
-    <p>Eignungstest</p>
-    <div id="Fragen">Bist du bereit, der Test zu starten?</div>
-    <ul id="Antworten">
-    </ul>
-    <div style="clear: both"></div>
-    <button id="button" class="button">Test beginnen</button>
+<h1>Finde dein zukünftigen Job!</h1>
+<h2>
+      <span style="background-color: #FFFF00"
+      >Ich habe Spaß am Planen und Organisieren</span>
+</h2>
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q1a1">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q1a2">Stimmt nicht zu</button>
+    </div>
 </div>
 
+<h2>
+      <span style="background-color: #FFFF00"
+      >Ich kann mich gut in andere Personen hineinversetzen</span
+      >
+</h2>
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q2a1">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q2a2">Stimmt nicht zu</button>
+    </div>
+</div>
 
+<h2>
+      <span style="background-color: #FFFF00"
+      >Mit neuen technischen Geräten komm ich meist auf Anhieb klar</span
+      >
+</h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q3a1">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q3a2">Stimmt nicht zu</button>
+    </div>
+</div>
+
+<h2><span style="background-color: #FFFF00">Theorie langweilt mich, ich probiere lieber alles praktisch aus</span></h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q4a1">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q4a2">Stimmt nicht zu</button>
+    </div>
+</div>
+
+<h2>
+    <span style="background-color: #FFFF00">Ich kann andere leicht von meinen Ideen überzeugen</span>
+</h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q5a1">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q5a2">Stimmt nicht zu</button>
+    </div>
+</div>
+
+<div class="Ergebnis">
+    <h3 id="Ergebnis">Dein Ergebnis ist...</h3>
+</div>
 </body>
 </html>
