--- a/htmls/htmlEinungstest.html
+++ b/htmls/htmlEinungstest.html
@@ -16,11 +16,11 @@
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q1a1">Stimmt zu</button>
+        <button class = "button" id="q1a1" onclick="Ergebnis1()">Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q1a2">Stimmt nicht zu</button>
+        <button class = "button" id="q1a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
     </div>
 </div>
 
@@ -32,11 +32,11 @@
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q2a1">Stimmt zu</button>
+        <button class = "button" id="q2a1" onclick="Ergebnis1()">Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q2a2">Stimmt nicht zu</button>
+        <button class = "button" id="q2a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
     </div>
 </div>
 
@@ -49,11 +49,11 @@
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q3a1">Stimmt zu</button>
+        <button class = "button" id="q3a1" onclick="Ergebnis1()">Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q3a2">Stimmt nicht zu</button>
+        <button class = "button" id="q3a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
     </div>
 </div>
 
@@ -62,11 +62,11 @@
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q4a1">Stimmt zu</button>
+        <button class = "button" id="q4a1" onclick="Ergebnis1()" >Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q4a2">Stimmt nicht zu</button>
+        <button class = "button" id="q4a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
     </div>
 </div>
 
@@ -77,11 +77,11 @@
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q5a1">Stimmt zu</button>
+        <button class = "button" id="q5a1" onclick="Ergebnis1()">Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q5a2">Stimmt nicht zu</button>
+        <button class = "button" id="q5a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
     </div>
 </div>
 
