--- a/htmls/html.html
+++ b/htmls/html.html
@@ -12,7 +12,7 @@
 
 <p>... muss überlegt werden</p>
 
-
+<div class=inDerMitte style="width:200px;margin:auto auto; ">
 <a href="htmlBerufe.html" >
     <div style="text-align: center"><button class="click" type="button">Berufsfelder</button></div>
 </a>
@@ -30,7 +30,7 @@
 <button class="click" type="button">Einungstest</button>
 </a>
 
-
+</div>
 
 
 
