html und script Eignungstest

--- a/htmls/htmlEinungstest.html
+++ b/htmls/htmlEinungstest.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Finde dein zukünftigen Job!</h1>
 <h2>
-      <span style="background-color: #FFFF00"
+      <span style="background-color: #ffffff"
       >Ich habe Spaß am Planen und Organisieren</span>
 </h2>
 <div class="question">
@@ -20,28 +20,28 @@
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q1a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+        <button class = "button" id="q1a2" onclick="Ergebnis3()">Stimmt nicht zu</button>
     </div>
 </div>
 
 <h2>
-      <span style="background-color: #FFFF00"
+      <span style="background-color: #ffffff"
       >Ich kann mich gut in andere Personen hineinversetzen</span
       >
 </h2>
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q2a1" onclick="Ergebnis1()">Stimmt zu</button>
+        <button class = "button" id="q2a1" onclick="Ergebnis2()">Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q2a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+        <button class = "button" id="q2a2" onclick="Ergebnis3()">Stimmt nicht zu</button>
     </div>
 </div>
 
 <h2>
-      <span style="background-color: #FFFF00"
+      <span style="background-color: #ffffff"
       >Mit neuen technischen Geräten komm ich meist auf Anhieb klar</span
       >
 </h2>
@@ -49,20 +49,20 @@
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q3a1" onclick="Ergebnis1()">Stimmt zu</button>
+        <button class = "button" id="q3a1" onclick="Ergebnis3()">Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q3a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+        <button class = "button" id="q3a2" onclick="Ergebnis1()">Stimmt nicht zu</button>
     </div>
 </div>
 
-<h2><span style="background-color: #FFFF00">Theorie langweilt mich, ich probiere lieber alles praktisch aus</span></h2>
+<h2><span style="background-color: #ffffff">Theorie langweilt mich, ich probiere lieber alles praktisch aus</span></h2>
 
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q4a1" onclick="Ergebnis1()" >Stimmt zu</button>
+        <button class = "button" id="q4a1" onclick="Ergebnis3()" >Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
@@ -71,22 +71,20 @@
 </div>
 
 <h2>
-    <span style="background-color: #FFFF00">Ich kann andere leicht von meinen Ideen überzeugen</span>
+    <span style="background-color: #ffffff">Ich kann andere leicht von meinen Ideen überzeugen</span>
 </h2>
 
 <div class="question">
     <div class="answer-choice">
         <br />
-        <button class = "button" id="q5a1" onclick="Ergebnis1()">Stimmt zu</button>
+        <button class = "button" id="q5a1" onclick="Ergebnis3()">Stimmt zu</button>
     </div>
     <div class="answer-choice">
         <br />
         <button class = "button" id="q5a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
     </div>
 </div>
-
-<div class="Ergebnis">
+<br>
     <h3 id="Ergebnis">Dein Ergebnis ist...</h3>
-</div>
 </body>
 </html>
