--- a/htmls/htmlDienstleistung.html
+++ b/htmls/htmlDienstleistung.html
@@ -13,6 +13,8 @@
     Wenn es um Sauberkeit und Hygiene oder Ver- und Entsorgung geht, gilt es zuverlässige und ökologische Lösungen anzubieten und umzusetzen. Daneben spielt das Thema Schutz und Sicherheit eine Rolle. Hier zeichnen sich einige der Berufsangehörigen dadurch aus, dass sie eine Uniform tragen, z.B. bei der Polizei oder im Flug- und Schiffsverkehr.
     Die Aufgaben im Dienstleistungssektor reichen von der Ausführung konkreter Serviceangebote bis hin zur Planung und Preisgestaltung.</p>
 
+<h2>Mit einem Click erfährst du mehr über die folgenden Berufe:</h2>
+
 <br>
 <a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9996.pdf">Assistent im Hotelmangement</a>
 
@@ -28,6 +30,13 @@
 
 <br>
 <a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/14448.pdf">Veranstaltungskaufmann/frau</a>
+
+<span class="bild100">
+    <img src="https://www.das-richtige-studieren.de/fileadmin/user_upload/Inhalte/das-richtige-studieren/Studiengaenge/Hotelmanagement-Studium-Einleitung.jpg">
+</span>
+
+
+
 
 
 
