--- a/htmls/htmlFreiwilligedienste.html
+++ b/htmls/htmlFreiwilligedienste.html
@@ -14,21 +14,38 @@
 
 <p> Wenn du nach der Schule eine Zeit lang mal etwas ganz anderes machen willst, kannst du einen Freiwilligendienst absolvieren. Dadurch sammelst du praktische Erfahrung und erwirbst soziale Kompetenzen.</p>
 
-<h3> Was ist ein Freiwilligendienst?</h3>
+<h3>
+    <span style="border: 4px solid lightcoral">Was ist ein Freiwilligendienst?</span>
+</h3>
+
 <p> Bei einem Freiwilligendienst engagierst du dich ehrenamtlich für andere.</p>
 
-<h3>Voraussetzung und Dauer:</h3>
+<h3>
+    <span style="border: 4px solid lightcoral">Voraussetzung und Dauer:</span>
+</h3>
+
+
 <p> Du musst dazu die allgemeine Schulpflicht erfüllt haben.
     Während deines Dienstes arbeitest du 6 bis 18 Monate in Vollzeit.
     Wenn du zum Beispiel eine Behinderung hast, einen Integrationskurs besuchst oder Kinder betreust, ist der Dienst auch in Teilzeit möglich.</p>
 
-<h3>Die Vorteile eines Freiwilligendienstes:</h3>
+<h3>
+    <span style="border: 4px solid lightcoral">Die Vorteile eines Freiwilligendienstes:</span>
+</h3>
+
+
+
 <p> Du engagierst dich für die Gesellschaft.
     Du entwickelst dich persönlich weiter, indem du deine Stärken und Interessen besser kennenlernst.
     Du knüpfst Kontakte zur Arbeitswelt und sammelst praktische Erfahrungen.
     Bei einer Bewerbung um eine Ausbildungsstelle ist ein Freiwilligendienst ein großer Pluspunkt.</p>
 
-<h3>Einsatzbereich</h3>
+<h3>
+    <span style="border: 4px solid lightcoral">Einsatzbereich:</span>
+</h3>
+
+
+
 <p> Sozialer Bereich (zum Beispiel im Krankenhaus, im Altenheim oder in der Kinder- und Jugendhilfe)</p>
 
 <p>Freiwilliges Soziales Jahr (FSJ)</p>
