--- a/htmls/htmlITundComputer.html
+++ b/htmls/htmlITundComputer.html
@@ -11,10 +11,17 @@
 
 <p>Von der Hardware bis zur Software,von der Programmierung bis zur Anwenderschulung:Der Bereich IT, Computer ist vielseitig und für viele Bereiche des täglichen Lebens unentbehrlich. Hier werden Komponenten, Computersysteme und Netzwerke entworfen,IT-Anwendungen programmiert und implementiert,IT-Systeme betreut oder Nutzer geschult. Ein weiterer Schwerpunkt liegt darauf,Systeme zur Steuerung und Optimierung betrieblicher Prozesse zu planen und umzusetzen. Andere Anwendungsgebiete eröffnen sich beispielsweise darin,kundenspezifische IT-Lösungen zu entwerfen oder Websites,Portale und Internetanwendungen zu konzipieren sowie deren laufende Pflege zu übernehmen.  </p>
 
+<h2>Mit einem Click erfährst du mehr über die folgenden Berufe:</h2>
+
 <a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/13814.pdf">Fachinformatiker/in</a>
 <a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/7798.pdf">Assistent/in für Wirtschaftsinformatik</a>
 <a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/133558.pdf">Kaufmann/-frau für IT-System-Management</a>
 <a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/133555.pdf">Kaufmann/-frau für Digitalisierungsmanagement</a>
+
+<span class="bild400">
+    <img src="https://www.bbraun.de/content/dam/b-braun/de/website/unternehmen/berufsausbildung/berufsausbildung-standort-tuttlingen/Studium%20Plus%20Informatik.jpg" height="250" width="350">
+
+</span>
 
 
 
