--- a/htmls/htmlWeiterbildung.html
+++ b/htmls/htmlWeiterbildung.html
@@ -11,19 +11,31 @@
 
 <p> Du willst dein berufliches Wissen erweitern? Oder in deinem Beruf vorankommen? Dann ist eine Weiterbildung genau das Richtige für dich!</p>
 
-<h2>Je nach Bedürfnis die passende Weiterbildung</h2>
+<h2>
+    <span style="border: 4px solid lightcoral">Je nach Bedürfnis die passende Weiterbildung</span>
+</h2>
+
+
 <p>Du kannst dich für deinen Beruf auf zwei Arten weiterbilden. Je nachdem, welches Ziel du mit einer Weiterbildung anstrebst. Willst du dein berufliches Wissen aktuell halten und an neue Anforderungen anpassen, ist eine Anpassungsweiterbildung das Mittel der Wahl. Dies ist vor allem in Bereichen, die sich schnell verändern, z.B. bei der Digitalisierung oder Automatisierung, immer wieder notwendig. Willst du dagegen die Karriereleiter nach oben klettern und in eine Führungsposition gelangen, kannst du eine Aufstiegsweiterbildung absolvieren. Diese führt zu einem höheren anerkannten Berufsabschluss und erhöht deine Chancen, beruflich voranzukommen.</p>
 
-<h3>Dauer und Kosten</h3>
-<p>Da Anpassungsweiterbildungen nur ein spezielles Thema behandeln, dauern sie oft nur einen bis mehrere Arbeitstage. Sie werden in der Regel von privaten Bildungsträgern angeboten. Die Kosten trägt die Arbeitgeberin oder der Arbeitgeber beziehungsweise die Teilnehmerin oder der Teilnehmer selbst. Aufstiegsweiterbildungen können z.B. zwischen einem und vier Jahren dauern. Die Dauer hängt auch davon ab, ob eine Weiterbildung in Voll- oder Teilzeit durchgeführt wird. Die Kosten unterscheiden sich nach Region, Bildungsträger und Art des Abschlusses. Beispielsweise sind Kurse zur Vorbereitung auf die Meisterprüfung kostenpflichtig. Die Weiterbildung zum/zur Techniker/in an einer staatlichen Fachschule ist in der Regel kostenfrei. Lass dich beraten, welche finanziellen Fördermöglichkeiten es für dich gibt.</p>
+<h3>
+    <span style="border: 4px solid lightcoral">Dauer und Kosten</span>
+</h3>
 
-<h4>Mögliche Weiterbildungsabschlüsse</h4>
+
+<p>Da Anpassungsweiterbildungen nur ein spezielles Thema behandeln, dauern sie oft nur einen bis mehrere Arbeitstage. Sie werden in der Regel von privaten Bildungsträgern angeboten. Die Kosten trägt die Arbeitgeberin oder der Arbeitgeber beziehungsweise die Teilnehmerin oder der Teilnehmer selbst. Aufstiegsweiterbildungen können z.B. zwischen einem und vier Jahren dauern. Die Dauer hängt auch davon ab, ob eine Weiterbildung in Voll- oder Teilzeit durchgeführt wird. Die Kosten unterscheiden sich nach Region, Bildungsträger und Art des Abschlusses.</p>
+
+<h4>
+    <span style="border: 4px solid lightcoral">Mögliche Weiterbildungsabschlüsse</span>
+</h4>
+
+
+
 <p>Eine abgeschlossene Berufsausbildung und gegebenenfalls Berufspraxis sind als Voraussetzung für die Teilnahme an einer Aufstiegsweiterbildung üblich. Die beliebtesten Weiterbildungsabschlüsse sind:</p>
 <p>Handwerksmeister/in</p>
 <p>Industriemeister/in</p>
 <p>Techniker/in</p>
 <p>Betriebswirt/in</p>
-<p>Alle qualifizieren dich für Führungspositionen, anspruchsvolle Fachaufgaben und den uneingeschränkten Besuch einer Hochschule. Mit dem Abschluss Techniker/in bzw. Handwerksmeister/in darf man Azubis ausbilden und kann sich mit einem eigenen Betrieb selbstständig machen. Für welche Weiterbildung du dich entscheidest, hängt vom Berufsabschluss ab, den du mitbringst: So kannst du dich als Pflegefachmann/-frau z.B. zur Pflegedienstleiterin oder zum Pflegedienstleiter weiterbilden. Und auch nach einer ersten Weiterbildung muss noch nicht Schluss sein: Als Handwerksmeister/in etwa kannst du die Weiterbildung zum Restaurator/zur Restauratorin machen.</p>
 
 
 </body>
