--- a/htmls/htmlMuster.html
+++ b/htmls/htmlMuster.html
@@ -10,7 +10,9 @@
 
 <h1>NaFINDE DEIN BERUF</h1>
 
-<p>Bewerbungsmuster</p>
+<h2>Bewerbungsmuster</h2>
+
+<p>Schau dir hier Beispiele für das Anschreiben und den Lebenslauf an!</p>
 
 <a href="https://planet-beruf.de/fileadmin/assets/01_Neu/05_PDF_Neu/Wie_bewerbe_ich_mich/Arbeitsblaetter/Musteranschreiben_fuer_eine_Ausbildungsstelle.pdf">
     <button class="click" type="button">Musteranschreiben für Ausbildungsstelle</button>
