--- a/htmls/htmlStudium.html
+++ b/htmls/htmlStudium.html
@@ -11,14 +11,29 @@
 <h1>Studium</h1>
 <p>m Studium beschäftigst du dich intensiv mit einem Thema und erstellst dafür deinen eigenen Stundenplan. Das läuft größtenteils theoretisch ab. Möchtest du neben dem Studium viel Praxiserfahrung sammeln, kannst du ein duales Studium absolvieren.</p>
 
-<h2>Studienfach wählen</h2>
+<h2>
+    <span style="border: 4px solid lightcoral">Studienfach wählen</span>
+</h2>
+
+
 <p>Ein Studium machst du an einer Hochschule beziehungsweise Universität, abgekürzt Uni. Dazu musst du die nötigen Voraussetzungen mitbringen. Du wählst ein Studienfach aus. Für jedes Semester suchst du dir Kurse aus deinem Studienfach oder Studiengang aus. Du erstellst dir dadurch deinen eigenen Stundenplan. Bestimmte Kurse oder Veranstaltungen sind Pflicht. Du schreibst Prüfungen, hältst Referate oder schreibst Aufsätze. Eine Uni ist ein Ort zum Ausprobieren und neu Kennenlernen. Denn du kannst nebenher Kurse aus anderen Studiengängen belegen und dort hineinschnuppern.</p>
 
-<h3>Bachelor und Master</h3>
+<h3>
+    <span style="border: 4px solid lightcoral">Bachelor und Master</span>
+
+</h3>
+
+
 <p>Die meisten Studiengänge sind in einen Bachelor- und einen Master-Studiengang eingeteilt. Der Bachelorstudiengang dauert in der Regel drei bis vier Jahre. Du hast damit dein erstes Studium abgeschlossen. Anschließend kannst du einen ein- bis zweijährigen Masterstudiengang anhängen. Mit einem Master vertiefst du deinen Bachelor-Studiengang oder orientierst dich in eine andere Richtung. Für bestimmte Berufe oder Führungspositionen benötigst du einen Masterabschluss.
     Die Abschlüsse Bachelor und Master sind international angeglichen. So kannst du zum Beispiel für einen Master ins Ausland gehen oder dich dort für einen Job bewerben.</p>
 
-<h4>Duales Studium mit viel Praxis</h4>
+<h4>
+    <span style="border: 4px solid lightcoral">Duales Studium mit viel Praxis</span>
+
+</h4>
+
+
+
 <p>In einigen Studienfächern kannst du ein duales Studium machen. Das heißt, du machst parallel zu deinem Studium eine Berufsausbildung, die zu dem Fach passt. Am Ende hast du zwei Abschlüsse. Manche Unternehmen bieten auch ein duales Studium an. Das bedeutet, dass du neben deinem Studium in diesem Unternehmen arbeitest. Im dualen Studium sammelst du Praxiserfahrung und knüpfst berufliche Kontakte. Darüber hinaus erhältst du meistens eine Vergütung. Ein duales Studium ist sehr zeitintensiv. Du musst dich gut organisieren können, damit du dich zum Beispiel neben der Arbeitszeit auf deine Prüfungen vorbereiten kannst.</p>
 
 
