--- a/htmls/htmlMoeglichkeiten.html
+++ b/htmls/htmlMoeglichkeiten.html
@@ -10,13 +10,15 @@
 
 <h1>NaFINDE DEIN BERUF</h1>
 
-<p>Möglichkeiten nach der Schule</p>
+<h2>Möglichkeiten nach der Schule</h2>
 
 <p> Hole einen Schulabschluss nach, finde Unterstützung für die Ausbildung, mache einen Freiwilligendienst oder gehe ins Ausland. Erfahre, welche Karrieremöglichkeiten du nach deiner Ausbildung hast. </p>
 
+<div class="incenter" style="...">
 <a href="htmlFreiwilligedienste.html">
-    <button class="click" type="button">Freiwilligedienste</button>
+    <div style="..."><button class="click" type="button">Freiwilligedienste</button></div>
 </a>
+
 
 <a href="htmlWeiterbildung.html">
     <button class="click" type="button">Weiterbildung</button>
@@ -25,6 +27,8 @@
 <a href="htmlStudium.html">
     <button class="click" type="button">Studium</button>
 </a>
+
+</div>
 
 
 
