--- a/htmls/htmlDienstleistung.html
+++ b/htmls/htmlDienstleistung.html
@@ -31,9 +31,9 @@
 <br>
 <a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/14448.pdf">Veranstaltungskaufmann/frau</a>
 
-<span class="bild100">
+<div class="bild100">
     <img src="https://www.das-richtige-studieren.de/fileadmin/user_upload/Inhalte/das-richtige-studieren/Studiengaenge/Hotelmanagement-Studium-Einleitung.jpg">
-</span>
+</div>
 
 
 
