--- a/htmls/htmlDienstleistung.html
+++ b/htmls/htmlDienstleistung.html
@@ -14,28 +14,28 @@
     Die Aufgaben im Dienstleistungssektor reichen von der Ausführung konkreter Serviceangebote bis hin zur Planung und Preisgestaltung.</p>
 
 <h2>Mit einem Click erfährst du mehr über die folgenden Berufe:</h2>
+<div class="dienstMitte">
+<br>
+<a style=text-decoration:none; href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9996.pdf">Assistent im Hotelmangement</a>
+<br>
 
 <br>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9996.pdf">Assistent im Hotelmangement</a>
-<br>
-
-<br>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/33235.pdf">Kaufmann/frau für Tourismus und Freizeit</a>
+<a style=text-decoration:none; href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/33235.pdf">Kaufmann/frau für Tourismus und Freizeit</a>
 <br>
 <br>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/7989.pdf">Fremdsprachenkorrespondent/in</a>
+<a style=text-decoration:none;href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/7989.pdf">Fremdsprachenkorrespondent/in</a>
 <br>
 <br>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/6712.pdf">Drogist/in</a>
+<a  style=text-decoration:none; href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/6712.pdf">Drogist/in</a>
 <br>
 <br>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/14448.pdf">Veranstaltungskaufmann/frau</a>
-<br>
+<a style=text-decoration:none; href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/14448.pdf">Veranstaltungskaufmann/frau</a>
+<br><br><br>
 <div class="bild100">
     <img src="https://www.das-richtige-studieren.de/fileadmin/user_upload/Inhalte/das-richtige-studieren/Studiengaenge/Hotelmanagement-Studium-Einleitung.jpg">
 </div>
 
-
+</div>
 
 
 
