--- a/htmls/htmlGesundheit.html
+++ b/htmls/htmlGesundheit.html
@@ -14,15 +14,37 @@
 
 <h2>Mit einem Click erfährst du mehr über die folgenden Berufe:</h2>
 
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8981.pdf">Medizinisch-technischer/r Radiologieassistent/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9063.pdf">Altenpflegehelfer/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8839.pdf">Hebamme/Entbindungspfleger</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8888.pdf">Rettungssanitäter/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8750.pdf">Physiotherapeut/in</a>
+<div class="dienstMitte">
 
-<span class="bild300">
-    <img src="https://www.azubiyo.de/media/8901/betreuung-im-krankenzimmer.jpeg" height="250" width="350">
-</span>
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8981.pdf">Medizinisch-technischer/r Radiologieassistent/in</a>
+<br>
+
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9063.pdf">Altenpflegehelfer/in</a>
+<br>
+
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8839.pdf">Hebamme/Entbindungspfleger</a>
+<br>
+
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8888.pdf">Rettungssanitäter/in</a>
+<br>
+
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/8750.pdf">Physiotherapeut/in</a>
+<br><br><br>
+
+
+
+
+<div class="bild300">
+    <img src="https://www.azubiyo.de/media/8901/betreuung-im-krankenzimmer.jpeg" height="300" width="450">
+</div>
+
+</div>
+
 
 
 
