--- a/htmls/htmlITundComputer.html
+++ b/htmls/htmlITundComputer.html
@@ -13,15 +13,27 @@
 
 <h2>Mit einem Click erfährst du mehr über die folgenden Berufe:</h2>
 
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/13814.pdf">Fachinformatiker/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/7798.pdf">Assistent/in für Wirtschaftsinformatik</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/133558.pdf">Kaufmann/-frau für IT-System-Management</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/133555.pdf">Kaufmann/-frau für Digitalisierungsmanagement</a>
+<div class="dienstMitte">
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/13814.pdf">Fachinformatiker/in</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/7798.pdf">Assistent/in für Wirtschaftsinformatik</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/133558.pdf">Kaufmann/-frau für IT-System-Management</a>
+<br>
+<br>
+<a style="text-decoration: none" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/133555.pdf">Kaufmann/-frau für Digitalisierungsmanagement</a>
+<br><br><br>
 
-<span class="bild400">
+
+<div class="bild400">
     <img src="https://www.bbraun.de/content/dam/b-braun/de/website/unternehmen/berufsausbildung/berufsausbildung-standort-tuttlingen/Studium%20Plus%20Informatik.jpg" height="250" width="350">
+</div>
 
-</span>
+</div>
+
 
 
 
