--- a/htmls/htmlSoziales.html
+++ b/htmls/htmlSoziales.html
@@ -14,16 +14,28 @@
 
 <h2>Mit einem Click erfährst du mehr über die folgenden Berufe:</h2>
 
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9162.pdf">Erzieher/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9127.pdf">Heilerziehungspfleger/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9031.pdf">Sozialassistent/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9077.pdf">Haus- und Familienpfleger/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9170.pdf">Kinderpfleger/in</a>
+<div class="dienstMitte">
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9162.pdf">Erzieher/in</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9127.pdf">Heilerziehungspfleger/in</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9031.pdf">Sozialassistent/in</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9077.pdf">Haus- und Familienpfleger/in</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/9170.pdf">Kinderpfleger/in</a>
+<br><br><br>
 
-<span class="bild600">
+<div class="bild600">
     <img src="https://image.brigitte.de/11725718/t/sq/v2/w1440/r1.5/-/erzieherinnen-teasewr.jpg" height="250" width="350">
-</span>
+</div>
 
+</div>
 
 
 </body>
