--- a/htmls/htmlWirtschaftundVerwaltung.html
+++ b/htmls/htmlWirtschaftundVerwaltung.html
@@ -15,15 +15,30 @@
 
 <h2>Mit einem Click erfährst du mehr über die folgenden Berufe:</h2>
 
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/35275.pdf">Immobilienkaufmann/-frau</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/6628.pdf">Verkäufer/in</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/7959.pdf">Rechtsanwalts- und Notarfachangestellte/r</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/6755.pdf">Bankkaufmann/-frau</a>
-<a href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/35279.pdf">Kaufmann/-frau für Marketingkommunikation</a>
 
-<span class="bild500">
+<div class="dienstMitte">
+<br>
+    <a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/35275.pdf">Immobilienkaufmann/-frau</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/6628.pdf">Verkäufer/in</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/7959.pdf">Rechtsanwalts- und Notarfachangestellte/r</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/6755.pdf">Bankkaufmann/-frau</a>
+<br>
+<br>
+<a style="text-decoration: none;" href="https://planet-beruf.de/fileadmin/assets/PDF/BKB/35279.pdf">Kaufmann/-frau für Marketingkommunikation</a>
+<br><br><br>
+
+<div class="bild500">
     <img src="https://www.karriere.sachsen.de/img/190318_Karriereportal_Header_1760px16_9_VERWALTUNG_rdax_87.jpg" height="250" width="350">
-</span>
+
+</div>
+
+</div>
 
 </body>
 </html>
