--- a/htmls/htmlBerufe.html
+++ b/htmls/htmlBerufe.html
@@ -9,9 +9,7 @@
 <body>
 
 <h1>NaFINDE DEIN BERUF</h1>
-<h2>
-    <span style="border: 4px solid lightcoral">Berufsfelder</span>
-</h2>
+<h2>Berufsfelder</h2>
 <p>Anhand von Berufsfeldern kannst du dir gut einen Überblick verschaffen, welche Berufe deinen Interessen entsprechen.</p>
 <p>Berufsfelder dienen der beruflichen Orientierung. Sie zeigen zum Beispiel, in welche Richtung es bei der Wahl eines Ausbildungsplatzes gehen kann.</p>
 
