html und script Eignungstest

--- a/htmls/htmlEinungstest.html
+++ b/htmls/htmlEinungstest.html
@@ -85,6 +85,83 @@
     </div>
 </div>
 <br>
+<h2>
+    <span style="background-color: #ffffff">Lieber arbeite ich mit Menschen als mit Dingen oder Ideen
+</span>
+</h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q6a1" onclick="Ergebnis3()">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q6a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+    </div>
+</div>
+<br>
+<h2>
+    <span style="background-color: #ffffff">Bei Konflikten kann ich gut zwischen Personen vermitteln
+</span>
+</h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q7a1" onclick="Ergebnis3()">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q7a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+    </div>
+</div>
+<br>
+<h2>
+    <span style="background-color: #ffffff">Am liebsten arbeite ich nach genauen Vorgaben
+</span>
+</h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q8a1" onclick="Ergebnis3()">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q8a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+    </div>
+</div>
+<br>
+<h2>
+    <span style="background-color: #ffffff">Ich habe Spaß am Planen und Organisieren</span>
+</h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q9a1" onclick="Ergebnis3()">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q9a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+    </div>
+</div>
+<br>
+<span style="background-color: #ffffff">Mir ist ein strukturierter Alltag wichtig</span>
+</h2>
+
+<div class="question">
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q10a1" onclick="Ergebnis3()">Stimmt zu</button>
+    </div>
+    <div class="answer-choice">
+        <br />
+        <button class = "button" id="q10a2" onclick="Ergebnis2()">Stimmt nicht zu</button>
+    </div>
+</div>
+<br>
     <h3 id="Ergebnis">Dein Ergebnis ist...</h3>
 </body>
 </html>
