--- a/htmls/html.html
+++ b/htmls/html.html
@@ -10,7 +10,7 @@
 <body>
 <h1>NaFINDE DEIN BERUF</h1>
 
-<p>... muss überlegt werden</p>
+<p>alle wichtigen Informationen an einem Ort</p>
 
 <div class=inDerMitte style="width:200px;margin:auto auto; ">
 <a href="htmlBerufe.html" >
@@ -27,7 +27,7 @@
 </a>
 <br>
 <a href="htmlEinungstest.html" >
-<button class="click" type="button">Einungstest</button>
+<button class="click" type="button">Eignungstest</button>
 </a>
 
 </div>
