--- a/htmls/htmlMuster.html
+++ b/htmls/htmlMuster.html
@@ -13,7 +13,7 @@
 <h2>Bewerbungsmuster</h2>
 
 <p>Schau dir hier Beispiele für das Anschreiben und den Lebenslauf an!</p>
-
+<div class=inDerMitte style="width:200px;margin:auto auto; ">
 <a href="https://planet-beruf.de/fileadmin/assets/01_Neu/05_PDF_Neu/Wie_bewerbe_ich_mich/Arbeitsblaetter/Musteranschreiben_fuer_eine_Ausbildungsstelle.pdf">
     <button class="click" type="button">Musteranschreiben für Ausbildungsstelle</button>
 </a>
