--- a/htmls/htmlEinungstest.html
+++ b/htmls/htmlEinungstest.html
@@ -134,7 +134,7 @@
 </div>
 <br>
 <h4>
-    <span style="background-color: #ffffff">Ich habe Spaß am Planen und Organisieren</span>
+    <span style="background-color: #ffffff">Ich helfe gerne anderen Menschen, in schwierigen Situationen</span>
 </h4>
 
 <div class="question">
