--- a/htmls/htmlBerufe.html
+++ b/htmls/htmlBerufe.html
@@ -7,9 +7,11 @@
     <script src="../scripts/scriptBerufe.js"></script>
 </head>
 <body>
+<div class=inDerMitte style="width:200px;margin:auto auto; ">
 
-<h1>NaFINDE DEIN BERUF</h1>
-<h2>Berufsfelder</h2>
+<img src=../img/e.png width=600px height=300px
+     <br>
+</div>
 <p>Anhand von Berufsfeldern kannst du dir gut einen Überblick verschaffen, welche Berufe deinen Interessen entsprechen.</p>
 <p>Berufsfelder dienen der beruflichen Orientierung. Sie zeigen zum Beispiel, in welche Richtung es bei der Wahl eines Ausbildungsplatzes gehen kann.</p>
 
