--- a/htmls/htmlMoeglichkeiten.html
+++ b/htmls/htmlMoeglichkeiten.html
@@ -7,14 +7,13 @@
     <script src="../scripts/scriptMoeglichkeiten.js"></script>
 </head>
 <body>
-
-<h1>NaFINDE DEIN BERUF</h1>
-
-<h2>Möglichkeiten nach der Schule</h2>
-
+<div class=inDerMitte style="width:200px;margin:auto auto; ">
+<img src=../img/k.png width=600px height=300px
+</div>
+<br>
 <p> Hole einen Schulabschluss nach, finde Unterstützung für die Ausbildung, mache einen Freiwilligendienst oder gehe ins Ausland. Erfahre, welche Karrieremöglichkeiten du nach deiner Ausbildung hast. </p>
-
-<div class="incenter" style="...">
+<br>
+    <div class=inDerMitte style="width:200px;margin:auto auto; ">
 <a href="htmlFreiwilligedienste.html">
     <div style="..."><button class="click" type="button">Freiwilligedienste</button></div>
 </a>
@@ -27,6 +26,7 @@
 <a href="htmlStudium.html">
     <button class="click" type="button">Studium</button>
 </a>
+    </div>
 
 </div>
 
