--- a/htmls/htmlMuster.html
+++ b/htmls/htmlMuster.html
@@ -7,10 +7,8 @@
     <script src="../scripts/scriptMuster.js"></script>
 </head>
 <body>
-
-<h1>NaFINDE DEIN BERUF</h1>
-
-<h2>Bewerbungsmuster</h2>
+<img src=../img/l.png. width=600px height=300px
+<br>
 
 <p>Schau dir hier Beispiele für das Anschreiben und den Lebenslauf an!</p>
 <div class=inDerMitte style="width:200px;margin:auto auto; ">
