--- a/htmls/htmlWeiterbildung.html
+++ b/htmls/htmlWeiterbildung.html
@@ -9,7 +9,7 @@
 
 <h1>Weiterbildung</h1>
 
-<p> Du willst dein berufliches Wissen erweitern? Oder in deinem Beruf vorankommen? Dann ist eine Weiterbildung genau das Richtige für dich!</p>
+<p> Du willst dein berufliches Wissen erweitern? oder in deinem Beruf vorankommen? Dann ist eine Weiterbildung genau das Richtige für dich!</p>
 
 <h2>
     <span style="border: 4px solid lightcoral">Je nach Bedürfnis die passende Weiterbildung</span>
